# ramulator-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  HBM-config.cfg  README.md  build.rs  dramsim2_wrapper.cc  dramsim2_wrapper.h  test.cc
.github/workflows/: rust.yml
src/: lib.rs
src/wrapper/: extern_api.rs  mod.rs
