[package]
name = "ramulator_wrapper"
version = "0.1.2"
edition = "2018"
license = "MIT"
description = "Wrapper for ramulator"
repository = "https://github.com/shenjiangqiu/ramulator-wrapper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"

[build-dependencies]
cmake="0.1"