[package]
description = "Wrapper for ramulator"
edition = "2021"
license = "MIT"
name = "ramulator_wrapper"
repository = "https://github.com/shenjiangqiu/ramulator-wrapper"
version = "0.2.3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = {version = "1.0.143", features = ["derive"]}

[build-dependencies]
cmake = "0.1"
